--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple foldable container",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-win":"node node_modules/babel-cli/bin/babel.js ./src --out-dir ./lib --source-maps"
   },
   "repository": {
     "type": "git",
